@@ -1,9 +1,9 @@
 ﻿namespace AjOslo.MGrammar.Tests
 {
     using System;
-    using System.Text;
     using System.Collections.Generic;
     using System.Linq;
+    using System.Text;
 
     using AjOslo.MGrammar.Compiler;
 
